# ScreenTrackAndAction

./: .gitignore  CMakeLists.txt  LICENSE  bottomwidget.cpp  bottomwidget.h  capturemouse.cpp  capturemouse.h  getpixmap.cpp  getpixmap.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recognizegesture.cpp  recognizegesture.h  regionselect.cpp  regionselect.h  scribblearea.cpp  scribblearea.h  textinsert.cpp  textinsert.h
model/: fdeep_model.json
